--- a/10-eff_size_pubs.Rmd
+++ b/10-eff_size_pubs.Rmd
@@ -17,7 +17,7 @@ From this output you see that $r$ = .30, 95%  CI [.28, .51].
 
 ## Repeated Measures $d$-values
 
-For a repeated measures design, different $d$-values can be report. Some authors (e.g., Cumming, 2011) suggest that $d$-values for independent group designs should reported for repeated measures designs -- and provide convincing arguments for this approach. That said, in our reading of the literature most people report and use repeated measures $d$-values, and corresponding confidence intervals, for repeated measures designs. Specifically, the use the formula below for repeated measures d-values. In this formula the symbol, \bar{x}_{diff}, indicates the mean of the column of differences. Likewise, s_{diff}, is used to indicate the standard deviation of the column of differences.
+For a repeated measures design, different $d$-values can be report. Some authors (e.g., Cumming, 2011) suggest that $d$-values for independent group designs should reported for repeated measures designs -- and provide convincing arguments for this approach. That said, in our reading of the literature most people report and use repeated measures $d$-values, and corresponding confidence intervals, for repeated measures designs. Specifically, the use the formula below for repeated measures d-values. In this formula the symbol, $\bar{x}_{diff}$, indicates the mean of the column of differences. Likewise, s_{diff}, is used to indicate the standard deviation of the column of differences.
 
 $$
 \begin{aligned}
