--- a/10-eff_size_pubs.Rmd
+++ b/10-eff_size_pubs.Rmd
@@ -1,7 +1,7 @@
 
 # Effect sizes with confidence intervals from a published study
 
-A key part of planning sample sizes for your current study is assessing effect sizes from past studies. Unfortunatley, studies often don't report effect sizes (e.g., $d$-values) or if they do, they don't report the confidence interval for that effect. In this chapter we focus on obtaining effect sizes with confidence intervals. 
+A key part of planning sample sizes for your current study is assessing effect sizes from past studies. Unfortunately, studies often don't report effect sizes (e.g., $d$-values) or if they do, they don't report the confidence interval for that effect. In this chapter we focus on obtaining effect sizes with confidence intervals. 
 
 
 ## Correlations
